modified pointers to files

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,18 +7,18 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="BitStream" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
+  <ion-tab title="BitStream" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/bitstream">
     <ion-nav-view name="tab-bitstream"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Following" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
+  <ion-tab title="Following" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/following">
     <ion-nav-view name="tab-following"></ion-nav-view>
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Followers" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
+  <ion-tab title="Followers" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/followers">
     <ion-nav-view name="tab-followers"></ion-nav-view>
   </ion-tab>
 
