Added a signup page and a sign up tab on the bottom. I plan on changing the location of the tab to a button on the login screen (once that is in existence)

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -7,8 +7,10 @@
           <input type="checkbox" ng-model="settings.enableFriends">
           <div class="track">
             <div class="handle"></div>
-          </div>
+          </div>     
         </label>
+        </ion-item>
+         <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#/tab/signup" title="Sign Up">
       </ion-item>
     </ion-list>
   </ion-content>
