--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -28,5 +28,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Sign Up" icon-off="ion-ios7-plus-outline" icon-on="ion-ios7-plus" href="#/tab/signup">
+    <ion-nav-view name="tab-signup"></ion-nav-view>
+  </ion-tab>
+
+
 
 </ion-tabs>
