Added SignUp page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,9 @@
 	margin-top: 12%;
 }
 
-.moveLeft {
-	margin-right: 5%
+.signUpBirthdayMonth {
+	margin-right: 35%
+}
+.signUpBirthdayDay {
+	margin-right: 18%
 }
