--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,6 +1,6 @@
 <ion-view class="bar-royal" view-title="SignUp">
 <div class="list">
-  <div class="padding signUpPadding">
+  <div class="padding signUpPadding" ng-controller="PopupCtrl">
     <label class="item item-input item-floating-label">
       <span class="input-label">First Name</span>
       <input type="text" placeholder="First Name">
@@ -31,55 +31,12 @@
         <option>Female</option>
       </select>
     </label>
-    <label class="item item-input item-select">
+    <label class="item item-input item-select" ng-click="showPopup()">
       <div class="input-label">
         Birthday
       </div>
-      <select id="days"></select>
-      <select id="months"></select>
-      <select id="years"></select>
     </label>
-    <button class="button button-block button-royal">
-      Create Account
-    </button>
   </div>
 </div>
 </ion-view>
-<script type="text/javascript">
-console.log("here");
-  $(function() {
-    //populate our years select box
-    for (i = new Date().getFullYear(); i > 1900; i--){
-      $('#years').append($('<option />').val(i).html(i));
-    }
-    //populate our months select box
-    for (i = 1; i < 13; i++){
-      $('#months').append($('<option />').val(i).html(i));
-    }
-    //populate our Days select box
-    updateNumberOfDays(); 
 
-    //"listen" for change events
-    $('#years, #months').change(function(){
-      updateNumberOfDays(); 
-    });
-
-  });
-
-//function to update the days based on the current values of month and year
-function updateNumberOfDays(){
-  $('#days').html('');
-  month = $('#months').val();
-  year = $('#years').val();
-  days = daysInMonth(month, year);
-
-  for(i=1; i < days+1 ; i++){
-    $('#days').append($('<option />').val(i).html(i));
-  }
-}
-
-//helper function
-function daysInMonth(month, year) {
-  return new Date(year, month, 0).getDate();
-}
-</script>
