--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,17 +11,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-bitstream"></ion-nav-view>
   </ion-tab>
 
-
-  <!-- Chats Tab -->
-  <ion-tab title="Following" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/following">
-    <ion-nav-view name="tab-following"></ion-nav-view>
+  <!-- Notifications Tab -->
+  <ion-tab title="Notifications" icon-off="ion-checkmark" icon-on="ion-checkmark-circled" href="#/tab/notifications">
+    <ion-nav-view name="tab-notifications"></ion-nav-view>
   </ion-tab>
-
-  <!-- Friends Tab -->
-  <ion-tab title="Followers" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/followers">
-    <ion-nav-view name="tab-followers"></ion-nav-view>
-  </ion-tab>
-
 
   <!-- Account Tab -->
   <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
