Finalized Sign Up Page

--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -31,11 +31,14 @@
         <option>Female</option>
       </select>
     </label>
-    <label class="item item-input item-select" ng-click="showPopup()">
-      <div class="input-label">
+    <label id="bdaytext" class="item item-input item-select"  ng-click="showPopup()" >
+      <div class="input-label" >
         Birthday
       </div>
     </label>
+    <button class="button button-block button-royal">
+      Create Account
+    </button>
   </div>
 </div>
 </ion-view>
