--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,44 +1,46 @@
 <ion-view class="bar-royal" view-title="SignUp">
-<div class="list">
-  <div class="padding signUpPadding" ng-controller="PopupCtrl">
-    <label class="item item-input item-floating-label">
-      <span class="input-label">First Name</span>
-      <input type="text" placeholder="First Name">
-    </label>
-    <label class="item item-input item-floating-label">
-      <span class="input-label">Last Name</span>
-      <input type="text" placeholder="Last Name">
-    </label>
-    <label class="item item-input item-floating-label">
-      <span class="input-label">Email</span>
-      <input type="text" placeholder="Email">
-    </label>
-    <label class="item item-input item-floating-label">
-      <span class="input-label">BitName</span>
-      <input type="text" placeholder="BitName">
-    </label>
-    <label class="item item-input item-floating-label">
-      <span class="input-label">Password</span>
-      <input type="password" placeholder="Password">
-    </label>
-    <label class="item item-input item-select">
-      <div class="input-label">
-        Gender
+  <ion-content>
+    <div class="list">
+      <div class="padding signUpPadding" ng-controller="PopupCtrl">
+        <label class="item item-input item-floating-label">
+          <span class="input-label">First Name</span>
+          <input type="text" placeholder="First Name">
+        </label>
+        <label class="item item-input item-floating-label">
+          <span class="input-label">Last Name</span>
+          <input type="text" placeholder="Last Name">
+        </label>
+        <label class="item item-input item-floating-label">
+          <span class="input-label">Email</span>
+          <input type="text" placeholder="Email">
+        </label>
+        <label class="item item-input item-floating-label">
+          <span class="input-label">BitName</span>
+          <input type="text" placeholder="BitName">
+        </label>
+        <label class="item item-input item-floating-label">
+          <span class="input-label">Password</span>
+          <input type="password" placeholder="Password">
+        </label>
+        <label class="item item-input item-select">
+          <div class="input-label">
+            Gender
+          </div>
+          <select>
+            <option selected>Optional</option>
+            <option>Male</option>
+            <option>Female</option>
+          </select>
+        </label>
+        <label id="bdaytext" class="item item-input item-select"  ng-click="showPopup()" >
+          <div class="input-label" >
+            Birthday
+          </div>
+        </label>
+        <button class="button button-block button-royal">
+          Create Account
+        </button>
       </div>
-      <select>
-        <option selected>Optional</option>
-        <option>Male</option>
-        <option>Female</option>
-      </select>
-    </label>
-    <label id="bdaytext" class="item item-input item-select"  ng-click="showPopup()" >
-      <div class="input-label" >
-        Birthday
-      </div>
-    </label>
-    <button class="button button-block button-royal">
-      Create Account
-    </button>
-  </div>
-</div>
+    </div>
+  </ion-content>
 </ion-view>
