--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -40,6 +40,7 @@
         <button class="button button-block button-royal" ng-click="submitForm()">
           Create Account
         </button>
+        <textarea class="serverMessage" ng-model="serverMessage" ></textarea>
       </div>
     </div>
   </ion-content>
