changed followers name

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -18,7 +18,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Followers" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/followers">
+  <ion-tab title="BoolePals" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/followers">
     <ion-nav-view name="tab-followers"></ion-nav-view>
   </ion-tab>
 
