changed background color
its purple and it doesn't work very well

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,3 +10,12 @@
 .signUpBirthdayDay {
 	margin-right: 18%
 }
+
+ion-content {
+	background-color: MediumPurple
+}
+
+.bar.bar-royal {
+	background-color: Indigo;
+	background-image: none;
+}
