fixed background color

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,3 +19,12 @@ ion-content {
 	background-color: Indigo;
 	background-image: none;
 }
+
+.item-floating-label {
+	background-color: White
+}
+
+.button.button-royal{
+	background-color: Indigo;
+	background-image: none;
+}
