Added the login page. Still need to do some touch ups and figure out how to go to the home page once the login button is clicked.

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -32,6 +32,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-signup"></ion-nav-view>
   </ion-tab>
 
+   <ion-tab title="Login" icon-off="ion-ios7-plus-outline" icon-on="ion-ios7-plus" href="#/tab/login">
+    <ion-nav-view name="tab-login"></ion-nav-view>
+  </ion-tab>
+
 
 
 </ion-tabs>
