--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -1,5 +1,4 @@
 <ion-view view-title="BitStream">
-<<<<<<< HEAD
   <ion-content>
     <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()">
     </ion-refresher>
@@ -9,44 +8,8 @@
           {{booleOut.bit}} {{booleOut.content}}</h2>
         <ion-option-button class="button-positive" ng-Click="upBoole()">upBoole</ion-option-button>
         <ion-option-button class="button-negative" ng-Click="downBoole()">downBoole</ion-option-button>
-        <ion-option-button class="button-assertive" ng-Click="reBoole()">reBoole</ion-option-button>
+        <ion-option-button class="button-assertive" ng-Click="reBoole">reBoole</ion-option-button>
       </ion-item>
     </ion-list>
-=======
-  <ion-content class="padding">
-    <div class="list card">
-<<<<<<< HEAD
-      <div class="item item-divider">booleOut</div>
-      <div class="item item-body">
-        <div>
-          <b>1 </b>#JurassicPark
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">booleOut</div>
-      <div class="item item-body">
-        <div>
-          <b>0 </b>#JurassicParkHaters
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">booleOut</div>
-      <div class="item item-body">
-        <div>
-          <b>1 </b>#pizza
-=======
-      <div class="item item-divider">This is where the bitstream will go</div>
-      <div class="item item-body">
-        <div>
-          <p>1 #bitstream</p>
-
-          <p>0 #noBitstream</p>
->>>>>>> 2e03d11ae0b55b90511038d8886b0a88c06efb5e
-        </div>
-      </div>
-    </div>
->>>>>>> 4733aefedd36cd0ee32c148b04ede4badda42fa9
   </ion-content>
 </ion-view>
