tried out buttons

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -10,5 +10,17 @@
         </div>
       </div>
     </div>
+
+    <form action="" method="post">
+      <input type="submit" name="search" value="1" style="float: right" />
+      <input type="submit" name="search" value="0" style="float: right" />
+      <div style="overflow: hidden; padding-right: .5em;">
+        <input type="text" name="term" style="width: 100%;" />
+      </div>
+
+    </form>
+
+
+
   </ion-content>
 </ion-view>
