--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,18 +1,28 @@
 /* Empty. Add your own CSS if you like */
 
 .signUpPadding {
-	margin-top: 12%;
+	margin: auto;
+	position: absolute;
+ 	top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.test {
+	margin-bottom: 5%;
 }
 
 .signUpBirthdayMonth {
-	margin-right: 35%
+	margin-right: 35%;
 }
 .signUpBirthdayDay {
-	margin-right: 18%
+	margin-right: 18%;
+}
+
+.login {
+	box-shadow:0 0 1px 1px #f43841;
 }
 
 ion-content {
-	background-color: MediumPurple
+	background-color: MediumPurple;
 }
 
 .bar.bar-royal {
@@ -21,7 +31,7 @@ ion-content {
 }
 
 .item-floating-label {
-	background-color: White
+	background-color: White;
 }
 
 .button.button-royal{
