--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -12,15 +12,11 @@
     </div>
 
     <form action="" method="post">
-      <input id="postOne" type="submit" name="search" value="1" style="float: right" />
-      <input id="postZero" type="submit" name="search" value="0" style="float: right" />
+      <input id="postOne" type="submit" name="search" value="1"  />
+      <input id="postZero" type="submit" name="search" value="0" />
       <div style="overflow: hidden; padding-right: .5em;">
         <input type="text" name="term" style="width: 100%;" />
       </div>
-
     </form>
-
-
-
   </ion-content>
 </ion-view>
