removed more style statements

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -14,9 +14,10 @@
     <form action="" method="post">
       <input id="postOne" type="submit" name="search" value="1"  />
       <input id="postZero" type="submit" name="search" value="0" />
-      <div style="overflow: hidden; padding-right: .5em;">
-        <input type="text" name="term" style="width: 100%;" />
+      <div id="postInput">
+        <input type="text" name="term"/>
       </div>
     </form>
+
   </ion-content>
 </ion-view>
