--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -12,10 +12,10 @@
     </div>
 
     <form action="" method="post">
-      <input id="postOne" type="submit" name="search" value="1"  />
-      <input id="postZero" type="submit" name="search" value="0" />
+      <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)" />
+      <input id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)"/>
       <div id="postInput">
-        <input type="text" name="term"/>
+        <input type="text" name="term" ng-model="bitstream.hashtag"/>
       </div>
     </form>
 
