--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,21 +3,21 @@
 <div class="list signUpPadding">
   <div style="text-align: center"> <img src = "img/logo.png"> </div>
   <div class="padding">
-    <label class="item item-input item-floating-label ">
+  <a class="invalidText">Invalid Bitname/Password</a>  
+    <label class="item item-input item-floating-label invalidHolder">
       <span class="input-label">BitName</span>
       <input type="text" placeholder="Bitname" ng-model="user.bitname">
     </label>
-    <label class="item item-input item-floating-label ">
+    <label class="item item-input item-floating-label invalidHolder">
       <span class="input-label">Password</span>
       <input type="password" placeholder="Password" ng-model="user.password">
     </label>
   </div>
   <div class="button-bar">
-  <a class="button" ng-click="signUp()">Sign Up</a>
   <a class="button button-royal" ng-click="login(user)">Login</a>
 </div>
   <p class="text-center">
-  <a class="test">Forgot Password</a>
+  <a>Forgot Password</a>
   </p>
 </div>
 </ion-content>
