removed some out of scope functions, changed buttons, removed dummy logic

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -8,7 +8,7 @@
           {{booleOut.bit}} {{booleOut.content}}</h2>
         <ion-option-button class="button-positive" ng-Click="upBoole()">upBoole</ion-option-button>
         <ion-option-button class="button-negative" ng-Click="downBoole()">downBoole</ion-option-button>
-        <ion-option-button class="button-assertive" ng-Click="reBoole">reBoole</ion-option-button>
+        <ion-option-button class="button-assertive" ng-Click="reply()">Reply</ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
