--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -3,9 +3,9 @@
     <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()">
     </ion-refresher>
     <ion-list type="in-set">
-      <ion-item class="item-avatar" ng-repeat="booleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
-        <h2><b>{{booleOut.user_name}}</b>
-          {{booleOut.bit}} {{booleOut.hashtag}}</h2>
+      <ion-item class="item-avatar" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
+        <h2><b>{{BooleOut.user_name}}</b>
+          {{BooleOut.bit}} {{BooleOut.hashtag}}</h2>
         <ion-option-button class="button-positive" ng-Click="upBoole()">upBoole</ion-option-button>
         <ion-option-button class="button-negative" ng-Click="downBoole()">downBoole</ion-option-button>
         <ion-option-button class="button-assertive" ng-Click="reply()">Reply</ion-option-button>
