added dummy booleOut to test functionality

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -10,6 +10,7 @@
         <ion-option-button class="button-negative" ng-Click="downBoole()">downBoole</ion-option-button>
         <ion-option-button class="button-assertive" ng-Click="reply()">Reply</ion-option-button>
       </ion-item>
+        <h2><b>djsaunde</b> 1 #BitStream</h2>
     </ion-list>
   </ion-content>
 </ion-view>
