cleaned up code, added image file

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,6 +7,7 @@
       <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       </ion-nav-buttons>
+    </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
