--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -5,7 +5,7 @@
     <ion-list type="in-set">
       <div ng-show="errorMessage"><h1>{{errorMessage}}</h1></div>
       <ion-item class="item-avatar" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream" >
-          <img src="question.jpg">
+          <img src="img/stock_picture.png">
           <h2><b>{{BooleOut.user_name}}</b>
           {{BooleOut.bit}} #{{BooleOut.hashtag}}</h2>
         <ion-option-button class="button-positive" ng-Click="upBoole(BooleOut.hashtag)">upBoole</ion-option-button>
