--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -7,7 +7,7 @@
       <ion-item class="item-avatar" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream" >
           <img src="img/stock_picture.png">
           <h2><b>{{BooleOut.user_name}}</b>
-          {{BooleOut.bit}} #{{BooleOut.hashtag}}</h2>
+          {{getBit(BooleOut.bit)}} #{{BooleOut.hashtag}}</h2>
         <ion-option-button class="button-positive" ng-Click="upBoole(BooleOut.hashtag)">upBoole</ion-option-button>
         <ion-option-button class="button-negative" ng-Click="downBoole(BooleOut.hashtag)">downBoole</ion-option-button>
         <ion-option-button class="button-assertive" ng-Click="reply(BooleOut)">Reply</ion-option-button>
