--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -11,13 +11,13 @@
                     <p>{{getBit(BooleOut.bit)}} #{{BooleOut.hashtag}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-                <button class="button icon-left ion-thumbsup" href="#">
+                <button class="button icon-left ion-thumbsup" href="#" onclick="upBoole(BooleOut)">
                     upBoole
                 </button>
-                <button class="button icon-left ion-thumbsdown" href="#">
+                <button class="button icon-left ion-thumbsdown" href="#" onclick="downBoole(BooleOut)">
                     downBoole
                 </button>
-                <button class="button icon-left ion-chatbox" href="#">
+                <button class="button icon-left ion-chatbox" href="#" onclick="reply(BooleOut)">
                     Reply
                 </button>
             </div>
