bug fixes for profile page

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view class="bar-royal" view-title="Profile">
+<ion-view view-title="Profile" ng-init="doSomething()">
   <ion-content>
     <div class="list">
       <div class="padding profilePadding">
