Added personal profile page, removed unwanted tabs

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,17 +11,17 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Following Tab -->
-  <ion-tab title="Following" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/following">
+<!--   <ion-tab title="Following" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/following">
     <ion-nav-view name="tab-following"></ion-nav-view>
   </ion-tab>
 
-  <!-- BoolePals Tab -->
+  BoolePals Tab
   <ion-tab title="BoolePals" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/followers">
     <ion-nav-view name="tab-followers"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
+  <ion-tab title="Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
