--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,15 +1,29 @@
-<ion-view view-title="Account">
+<ion-view view-title="Profile">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-toggle">
-        Enable Friends
-        <label class="toggle">
-          <input type="checkbox" ng-model="settings.enableFriends">
-          <div class="track">
-            <div class="handle"></div>
-          </div>
-        </label>
-        </ion-item>
-    </ion-list>
+    <div class="list">
+      <div class="padding profilePadding">
+       <div style="text-align: center"> <img src = "img/defaultProfile.png"> 
+       <p><p>
+       <i id="profileFont">{{profileData.firstName}} {{profileData.lastName}}</i>
+       </p></p></div>
+       <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
+
+<!--        <div class="list list-inset">
+
+    <div class="item">
+      1 #SnowDay
+    </div>
+    <div class="item">
+      0 #Deadlines
+    </div>
+    <div class="item">
+      1 #Spring
+    </div>
+
+    
+
+</div> -->
+      </div>
+    </div>
   </ion-content>
 </ion-view>
