--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -8,7 +8,7 @@
             <div class="item item-avatar" >
                 <img src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
-                    <p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} #{{BooleOut.hashtag}}</p>
+                    <p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
                 <button class="button icon-left ion-thumbsup" href="#" onclick="upBoole(BooleOut)">
