reply to booleouts

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -20,7 +20,7 @@
                 <button class="button icon-left ion-chatbox" href="#" ng-click="reply(BooleOut._id)">
                     View Replies
                 </button>
-                <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup()">
+                <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id)">
                     Reply
                 </button>
 
