--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,3 @@
-
 .signUpPadding {
 	margin: auto;
 	position: absolute;
@@ -14,6 +13,11 @@
 #profileFont {
 	font-size: 200%;
 	font-family: Copperplate;
+}
+
+#usernameFont{
+	color: rgb(215, 208, 208);
+	font-size: 160%;
 }
 
 .splash {
@@ -64,10 +68,7 @@ ion-content {
 	background-color: Indigo;
 	background-image: none;
 }
-<<<<<<< HEAD
-=======
-
 .loadImage {
 	background-color: #502d7f;
 }
->>>>>>> master
+
