ugly go back button

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -10,21 +10,10 @@
        </p></p></div>
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
 
-<!--        <div class="list list-inset">
 
-    <div class="item">
-      1 #SnowDay
-    </div>
-    <div class="item">
-      0 #Deadlines
-    </div>
-    <div class="item">
-      1 #Spring
-    </div>
-
-    
-
-</div> -->
+       <button class="button" href="#" ng-click="goBack()">
+                    Go Back
+        </button>
       </div>
     </div>
   </ion-content>
