--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -10,17 +10,9 @@
                     <p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-                <button class="button icon-left ion-thumbsup" href="#" onclick="upBoole(BooleOut)">
-                    upBoole
-                </button>
-                <button class="button icon-left ion-thumbsdown" href="#" onclick="downBoole(BooleOut)">
-                    downBoole
-                </button>
-                <button class="button icon-left ion-chatbox" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]">
-                    View Replies
+                <button class="button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]">
                 </button>
                 <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id)">
-                    Reply
                 </button>
 
             </div>
