--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -32,8 +32,8 @@
         </div>
     </ion-list>
   </ion-content>
-  <ion-footer-bar class="bar-royal">
-    <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)" />
+  <ion-footer-bar class="bar-royal" center="">
+    <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)"/>
     <input id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)"/>
     <div id="postInput">
       <input type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
