added missing line of code

--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -27,6 +27,7 @@
             
         </div>
     </ion-list>
+    </ion-content>
   <ion-footer-bar class="bar-royal">
     <div id="postInput">
       <input type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
