--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -12,7 +12,7 @@
             <div class="item tabs tabs-secondary tabs-icon-left">
 
                 <button class="buttonDown{{BooleOut._id}} button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]"></button>
-                <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id)">
+                <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id); replyShow[BooleOut._id] = true">
                 </button>
 
             </div>
