--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -10,10 +10,11 @@
        </p></p></div>
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
 
-
-       <button class="button" href="#" ng-click="goBack()">
-                    Go Back
+      <div class="container center-children">
+        <button class="button button-royal" href="#" ng-click="goBack()">
+          Go Back
         </button>
+      </div>
       </div>
     </div>
   </ion-content>
