--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -28,10 +28,10 @@
         </div>
     </ion-list>
     </ion-content>
-  <ion-footer-bar class="bar-royal">
-      <input id="booleOutInput" type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
-    <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)" />
-    <input id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)"/>
-    </div>
+    <ion-footer-bar class="bar-royal">
+        <input id="booleOutInput" type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
+        <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)" />
+        <input id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)"/>
+    </ion-footer-bar>
 </ion-view>
 
