added a warning message on signup page when a user already exists or if a required field hasn't been entered

--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,24 +1,24 @@
 <ion-view class="bar-royal" view-title="Sign Up">
   <ion-content>
     <div class="list">
-      <div class="padding signUpPadding" ng-controller="SignUpCtrl">
-        <label class="item item-input item-floating-label">
+      <div class="itemWhole padding signUpPadding" ng-controller="SignUpCtrl">
+        <label class="itemFirst item item-input item-floating-label">
           <span class="input-label">First Name</span>
           <input type="text" placeholder="First Name" ng-model="signup.firstName">
         </label>
-        <label class="item item-input item-floating-label">
+        <label class="itemLast item item-input item-floating-label">
           <span class="input-label">Last Name</span>
           <input type="text" placeholder="Last Name" ng-model="signup.lastName">
         </label>
-        <label class="item item-input item-floating-label">
+        <label class="itemEmail item item-input item-floating-label">
           <span class="input-label">Email</span>
           <input type="text" placeholder="Email" ng-model="signup.email">
         </label>
-        <label class="item item-input item-floating-label">
-          <span class="input-label">BitName</span>
+        <label class="itemBit item item-input item-floating-label">
+          <span class="input-label bitText">BitName</span>
           <input type="text" placeholder="BitName" ng-model="signup.bitName">
         </label>
-        <label class="item item-input item-floating-label">
+        <label class="itemPass item item-input item-floating-label">
           <span class="input-label">Password</span>
           <input type="password" placeholder="Password" ng-model="signup.password">
         </label>
