Added a confirm password check and valid email check

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,11 +6,11 @@
   <div class="padding">
   <a class="invalidText">Invalid Bitname/Password</a>  
     <label class="item item-input item-floating-label invalidHolder">
-      <span class="input-label">BitName</span>
+      <span class="input-label changeRed">BitName</span>
       <input type="text" placeholder="Bitname" ng-model="user.bitname">
     </label>
     <label class="item item-input item-floating-label invalidHolder">
-      <span class="input-label">Password</span>
+      <span class="input-label changeRed">Password</span>
       <input type="password" placeholder="Password" ng-model="user.password">
     </label>
   </div>
