removed Yuriy picture, added method to follow a user from the profile, not yet implemented

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -10,11 +10,14 @@
        </p></p></div>
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
 
-      <div class="container center-children">
-        <button class="button button-royal" href="#" ng-click="goBack()">
-          Go Back
-        </button>
-      </div>
+        <div class="container center-children">
+          <button class="button button-royal" href="#" ng-click="goBack()">
+            Go Back
+          </button>
+          <button class="button button-royal" href="#" ng-click="follow()">
+            Follow
+          </button>
+        </div>
       </div>
     </div>
   </ion-content>
