--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
       <div class="padding profilePadding">
-       <div style="text-align: center"> <img src = "img/yuriy.jpg">
+       <div style="text-align: center"> <img src = "img/defaultProfile.png">
        <p><p>
        <i id="profileFont">{{profileData.firstName}} {{profileData.lastName}}</i>
        <br>
