changed follow button element

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -14,8 +14,7 @@
           <button class="button button-royal" href="#" ng-click="goBack()">
             Go Back
           </button>
-          <button class="button button-royal" href="#" ng-click="follow()">
-            Follow
+          <button id="followButton" value="Follow" class="button button-royal" href="#" ng-click="follow()">
           </button>
         </div>
       </div>
