added front-end logic for following / unfollowing

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -14,7 +14,8 @@
           <button class="button button-royal" href="#" ng-click="goBack()">
             Go Back
           </button>
-          <button id="followButton" value="Follow" class="button button-royal" href="#" ng-click="follow()">
+          <button id="followButton" class="button button-royal" href="#" ng-click="follow()">
+            Follow
           </button>
         </div>
       </div>
