--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -11,10 +11,10 @@
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
 
         <div class="container center-children">
-          <button class="button button-royal" href="#" ng-click="goBack()">
+          <button class="button button-royal" ng-click="goBack()">
             Go Back
           </button>
-          <button id="followButton" class="button button-royal" href="#" ng-click="follow()">
+          <button id="followButton" class="button button-royal" ng-click="follow()">
             Follow
           </button>
         </div>
