--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,7 +21,12 @@ navigation history that also transitions its views in and out.
   </ion-tab> -->
 
   <!-- Account Tab -->
-  <ion-tab title="Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
+  <ion-tab title="Profile" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
+
+   <ion-tab title="Settings" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
+  </ion-tab>
+
 </ion-tabs>
